// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CourseBookingReview matches snapshot for CLOSED course 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="MuiBox-root css-0"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle1 css-saotp0-MuiTypography-root"
        >
          Please confirm to complete booking
        </h6>
        <div
          class="MuiBox-root css-1yslcum"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-10prckl-MuiTypography-root"
          >
            Your information
          </p>
          <div
            class="MuiBox-root css-3mllz6"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-g4enr8-MuiTypography-root"
            >
              First Name
            </p>
            <p
              class="MuiTypography-root MuiTypography-body1 css-bvjatk-MuiTypography-root"
            >
              John
            </p>
          </div>
          <div
            class="MuiBox-root css-3mllz6"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-g4enr8-MuiTypography-root"
            >
              Last Name
            </p>
            <p
              class="MuiTypography-root MuiTypography-body1 css-bvjatk-MuiTypography-root"
            >
              Smith
            </p>
          </div>
          <div
            class="MuiBox-root css-3mllz6"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-g4enr8-MuiTypography-root"
            >
              Email
            </p>
            <p
              class="MuiTypography-root MuiTypography-body1 css-bvjatk-MuiTypography-root"
            >
              john.smith@example.com
            </p>
          </div>
          <div
            class="MuiBox-root css-3mllz6"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-g4enr8-MuiTypography-root"
            >
              Work phone
            </p>
            <p
              class="MuiTypography-root MuiTypography-body1 css-bvjatk-MuiTypography-root"
            >
              +44 1234555
            </p>
          </div>
        </div>
        <div
          class="MuiBox-root css-f8teni"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-10prckl-MuiTypography-root"
          >
            Order summary
          </p>
          <div
            class="MuiBox-root css-gg4vpm"
          >
            <div
              class="MuiBox-root css-0"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-10prckl-MuiTypography-root"
              >
                My Course 1
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-15v3a2l-MuiTypography-root"
              >
                Start
                :
                 
                10 April 2022, 10:00 AM
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 css-g4enr8-MuiTypography-root"
              >
                End
                :
                 
                10 April 2022, 12:00 PM
              </p>
            </div>
            <div
              class="css-1qvzoxq-MuiStack-root"
            >
              <span
                class="MuiTypography-root MuiTypography-caption MuiTypography-gutterBottom css-fu2bn5-MuiTypography-root"
              >
                Quantity
              </span>
              <p
                class="MuiTypography-root MuiTypography-body1 css-bvjatk-MuiTypography-root"
              >
                12
              </p>
            </div>
          </div>
          <hr
            class="MuiDivider-root MuiDivider-fullWidth css-ctpjxq-MuiDivider-root"
          />
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-10prckl-MuiTypography-root"
          >
            Payment method
          </p>
          <p
            class="MuiTypography-root MuiTypography-body1 css-g4enr8-MuiTypography-root"
          >
            Pay by invoice
          </p>
          <hr
            class="MuiDivider-root MuiDivider-fullWidth css-ctpjxq-MuiDivider-root"
          />
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-10prckl-MuiTypography-root"
          >
            Invoice contact details
          </p>
          <div
            class="MuiBox-root css-3mllz6"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-g4enr8-MuiTypography-root"
            >
              Billing address
            </p>
            <p
              class="MuiTypography-root MuiTypography-body1 css-bvjatk-MuiTypography-root"
            />
          </div>
          <div
            class="MuiBox-root css-3mllz6"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-g4enr8-MuiTypography-root"
            >
              First Name
            </p>
            <p
              class="MuiTypography-root MuiTypography-body1 css-bvjatk-MuiTypography-root"
            />
          </div>
          <div
            class="MuiBox-root css-3mllz6"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-g4enr8-MuiTypography-root"
            >
              Last Name
            </p>
            <p
              class="MuiTypography-root MuiTypography-body1 css-bvjatk-MuiTypography-root"
            />
          </div>
          <div
            class="MuiBox-root css-3mllz6"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-g4enr8-MuiTypography-root"
            >
              Work email
            </p>
            <p
              class="MuiTypography-root MuiTypography-body1 css-bvjatk-MuiTypography-root"
            />
          </div>
          <div
            class="MuiBox-root css-3mllz6"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-g4enr8-MuiTypography-root"
            >
              Phone
            </p>
            <p
              class="MuiTypography-root MuiTypography-body1 css-bvjatk-MuiTypography-root"
            />
          </div>
          <hr
            class="MuiDivider-root MuiDivider-fullWidth css-ctpjxq-MuiDivider-root"
          />
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-10prckl-MuiTypography-root"
          >
            Registrants
          </p>
          <div
            class="MuiBox-root css-3mllz6"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-g4enr8-MuiTypography-root"
            >
              Trainer expenses
            </p>
            <p
              class="MuiTypography-root MuiTypography-body1 css-g4enr8-MuiTypography-root"
            >
              £721.50
            </p>
          </div>
          <hr
            class="MuiDivider-root MuiDivider-fullWidth css-ctpjxq-MuiDivider-root"
          />
          <div
            class="MuiBox-root css-3mllz6"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-g4enr8-MuiTypography-root"
            >
              Subtotal
            </p>
            <p
              class="MuiTypography-root MuiTypography-body1 css-g4enr8-MuiTypography-root"
            >
              £240.00
            </p>
          </div>
          <div
            class="MuiBox-root css-3mllz6"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-g4enr8-MuiTypography-root"
            >
              Free spaces
            </p>
            <p
              class="MuiTypography-root MuiTypography-body1 css-g4enr8-MuiTypography-root"
            >
              -£40.00
            </p>
          </div>
          <hr
            class="MuiDivider-root MuiDivider-fullWidth css-ctpjxq-MuiDivider-root"
          />
          <div
            class="MuiBox-root css-3mllz6"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-g4enr8-MuiTypography-root"
            >
              VAT (20%)
               (
              10
              %)
            </p>
            <p
              class="MuiTypography-root MuiTypography-body1 css-g4enr8-MuiTypography-root"
            >
              £20.00
            </p>
          </div>
          <hr
            class="MuiDivider-root MuiDivider-fullWidth css-ctpjxq-MuiDivider-root"
          />
          <div
            class="MuiBox-root css-3mllz6"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-fp5ivw-MuiTypography-root"
            >
              Amount due
               (
              GBP
              )
            </p>
            <p
              class="MuiTypography-root MuiTypography-body1 css-fp5ivw-MuiTypography-root"
            >
              £941.50
            </p>
          </div>
          <p
            class="MuiTypography-root MuiTypography-body1 css-g4enr8-MuiTypography-root"
          >
            Due immediately
          </p>
        </div>
        <label
          class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd css-zwxq8w-MuiFormControlLabel-root"
        >
          <span
            class="MuiCheckbox-root MuiCheckbox-colorPrimary MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary PrivateSwitchBase-root css-x1h8s1-MuiButtonBase-root-MuiCheckbox-root"
          >
            <input
              class="PrivateSwitchBase-input css-1m9pwf3"
              data-indeterminate="false"
              type="checkbox"
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
              data-testid="CheckBoxOutlineBlankIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
              />
            </svg>
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </span>
          <p
            class="MuiTypography-root MuiTypography-body2 css-1bc48s6-MuiTypography-root"
          >
            I confirm I and/or those individuals added as registrants on this course will attend even if it starts during my 14 day cancellation period. I understand that I will lose my right to cancel the contract once the course is complete and that I must pay for services provided prior to cancellation.
          </p>
        </label>
        <div
          class="MuiBox-root css-10irpkx"
        />
        <div
          class="MuiBox-root css-ns0zoh"
        >
          <button
            class="MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root  css-174o8gv-MuiButtonBase-root-MuiButton-root"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-startIcon MuiButton-iconSizeMedium css-gcc2o7-MuiButton-startIcon"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                data-testid="ArrowBackIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
                />
              </svg>
            </span>
            Back to booking details
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </button>
          <button
            class="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButtonBase-root Mui-disabled  css-u3jo4d-MuiButtonBase-root-MuiButton-root"
            disabled=""
            tabindex="-1"
            type="button"
          >
            Complete booking
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="MuiBox-root css-0"
    >
      <h6
        class="MuiTypography-root MuiTypography-subtitle1 css-saotp0-MuiTypography-root"
      >
        Please confirm to complete booking
      </h6>
      <div
        class="MuiBox-root css-1yslcum"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-10prckl-MuiTypography-root"
        >
          Your information
        </p>
        <div
          class="MuiBox-root css-3mllz6"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-g4enr8-MuiTypography-root"
          >
            First Name
          </p>
          <p
            class="MuiTypography-root MuiTypography-body1 css-bvjatk-MuiTypography-root"
          >
            John
          </p>
        </div>
        <div
          class="MuiBox-root css-3mllz6"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-g4enr8-MuiTypography-root"
          >
            Last Name
          </p>
          <p
            class="MuiTypography-root MuiTypography-body1 css-bvjatk-MuiTypography-root"
          >
            Smith
          </p>
        </div>
        <div
          class="MuiBox-root css-3mllz6"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-g4enr8-MuiTypography-root"
          >
            Email
          </p>
          <p
            class="MuiTypography-root MuiTypography-body1 css-bvjatk-MuiTypography-root"
          >
            john.smith@example.com
          </p>
        </div>
        <div
          class="MuiBox-root css-3mllz6"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-g4enr8-MuiTypography-root"
          >
            Work phone
          </p>
          <p
            class="MuiTypography-root MuiTypography-body1 css-bvjatk-MuiTypography-root"
          >
            +44 1234555
          </p>
        </div>
      </div>
      <div
        class="MuiBox-root css-f8teni"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-10prckl-MuiTypography-root"
        >
          Order summary
        </p>
        <div
          class="MuiBox-root css-gg4vpm"
        >
          <div
            class="MuiBox-root css-0"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-10prckl-MuiTypography-root"
            >
              My Course 1
            </p>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-15v3a2l-MuiTypography-root"
            >
              Start
              :
               
              10 April 2022, 10:00 AM
            </p>
            <p
              class="MuiTypography-root MuiTypography-body1 css-g4enr8-MuiTypography-root"
            >
              End
              :
               
              10 April 2022, 12:00 PM
            </p>
          </div>
          <div
            class="css-1qvzoxq-MuiStack-root"
          >
            <span
              class="MuiTypography-root MuiTypography-caption MuiTypography-gutterBottom css-fu2bn5-MuiTypography-root"
            >
              Quantity
            </span>
            <p
              class="MuiTypography-root MuiTypography-body1 css-bvjatk-MuiTypography-root"
            >
              12
            </p>
          </div>
        </div>
        <hr
          class="MuiDivider-root MuiDivider-fullWidth css-ctpjxq-MuiDivider-root"
        />
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-10prckl-MuiTypography-root"
        >
          Payment method
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1 css-g4enr8-MuiTypography-root"
        >
          Pay by invoice
        </p>
        <hr
          class="MuiDivider-root MuiDivider-fullWidth css-ctpjxq-MuiDivider-root"
        />
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-10prckl-MuiTypography-root"
        >
          Invoice contact details
        </p>
        <div
          class="MuiBox-root css-3mllz6"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-g4enr8-MuiTypography-root"
          >
            Billing address
          </p>
          <p
            class="MuiTypography-root MuiTypography-body1 css-bvjatk-MuiTypography-root"
          />
        </div>
        <div
          class="MuiBox-root css-3mllz6"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-g4enr8-MuiTypography-root"
          >
            First Name
          </p>
          <p
            class="MuiTypography-root MuiTypography-body1 css-bvjatk-MuiTypography-root"
          />
        </div>
        <div
          class="MuiBox-root css-3mllz6"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-g4enr8-MuiTypography-root"
          >
            Last Name
          </p>
          <p
            class="MuiTypography-root MuiTypography-body1 css-bvjatk-MuiTypography-root"
          />
        </div>
        <div
          class="MuiBox-root css-3mllz6"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-g4enr8-MuiTypography-root"
          >
            Work email
          </p>
          <p
            class="MuiTypography-root MuiTypography-body1 css-bvjatk-MuiTypography-root"
          />
        </div>
        <div
          class="MuiBox-root css-3mllz6"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-g4enr8-MuiTypography-root"
          >
            Phone
          </p>
          <p
            class="MuiTypography-root MuiTypography-body1 css-bvjatk-MuiTypography-root"
          />
        </div>
        <hr
          class="MuiDivider-root MuiDivider-fullWidth css-ctpjxq-MuiDivider-root"
        />
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-10prckl-MuiTypography-root"
        >
          Registrants
        </p>
        <div
          class="MuiBox-root css-3mllz6"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-g4enr8-MuiTypography-root"
          >
            Trainer expenses
          </p>
          <p
            class="MuiTypography-root MuiTypography-body1 css-g4enr8-MuiTypography-root"
          >
            £721.50
          </p>
        </div>
        <hr
          class="MuiDivider-root MuiDivider-fullWidth css-ctpjxq-MuiDivider-root"
        />
        <div
          class="MuiBox-root css-3mllz6"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-g4enr8-MuiTypography-root"
          >
            Subtotal
          </p>
          <p
            class="MuiTypography-root MuiTypography-body1 css-g4enr8-MuiTypography-root"
          >
            £240.00
          </p>
        </div>
        <div
          class="MuiBox-root css-3mllz6"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-g4enr8-MuiTypography-root"
          >
            Free spaces
          </p>
          <p
            class="MuiTypography-root MuiTypography-body1 css-g4enr8-MuiTypography-root"
          >
            -£40.00
          </p>
        </div>
        <hr
          class="MuiDivider-root MuiDivider-fullWidth css-ctpjxq-MuiDivider-root"
        />
        <div
          class="MuiBox-root css-3mllz6"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-g4enr8-MuiTypography-root"
          >
            VAT (20%)
             (
            10
            %)
          </p>
          <p
            class="MuiTypography-root MuiTypography-body1 css-g4enr8-MuiTypography-root"
          >
            £20.00
          </p>
        </div>
        <hr
          class="MuiDivider-root MuiDivider-fullWidth css-ctpjxq-MuiDivider-root"
        />
        <div
          class="MuiBox-root css-3mllz6"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-fp5ivw-MuiTypography-root"
          >
            Amount due
             (
            GBP
            )
          </p>
          <p
            class="MuiTypography-root MuiTypography-body1 css-fp5ivw-MuiTypography-root"
          >
            £941.50
          </p>
        </div>
        <p
          class="MuiTypography-root MuiTypography-body1 css-g4enr8-MuiTypography-root"
        >
          Due immediately
        </p>
      </div>
      <label
        class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd css-zwxq8w-MuiFormControlLabel-root"
      >
        <span
          class="MuiCheckbox-root MuiCheckbox-colorPrimary MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary PrivateSwitchBase-root css-x1h8s1-MuiButtonBase-root-MuiCheckbox-root"
        >
          <input
            class="PrivateSwitchBase-input css-1m9pwf3"
            data-indeterminate="false"
            type="checkbox"
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="CheckBoxOutlineBlankIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
            />
          </svg>
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </span>
        <p
          class="MuiTypography-root MuiTypography-body2 css-1bc48s6-MuiTypography-root"
        >
          I confirm I and/or those individuals added as registrants on this course will attend even if it starts during my 14 day cancellation period. I understand that I will lose my right to cancel the contract once the course is complete and that I must pay for services provided prior to cancellation.
        </p>
      </label>
      <div
        class="MuiBox-root css-10irpkx"
      />
      <div
        class="MuiBox-root css-ns0zoh"
      >
        <button
          class="MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root  css-174o8gv-MuiButtonBase-root-MuiButton-root"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-startIcon MuiButton-iconSizeMedium css-gcc2o7-MuiButton-startIcon"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
              data-testid="ArrowBackIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
              />
            </svg>
          </span>
          Back to booking details
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
        <button
          class="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButtonBase-root Mui-disabled  css-u3jo4d-MuiButtonBase-root-MuiButton-root"
          disabled=""
          tabindex="-1"
          type="button"
        >
          Complete booking
        </button>
      </div>
    </div>
  </div>,
  "context": Object {
    "auth": Object {
      "activeRole": "user",
      "allowedRoles": Set {
        "user",
      },
      "changeRole": [MockFunction],
      "defaultRole": "user",
      "getJWT": [MockFunction],
      "loadProfile": [MockFunction],
      "loading": false,
      "login": [MockFunction],
      "logout": [MockFunction],
      "profile": Object {
        "addresses": Array [],
        "attributes": Array [],
        "avatar": "",
        "contactDetails": Array [],
        "createdAt": "",
        "dietaryRestrictions": null,
        "disabilities": null,
        "dob": "2002-04-06",
        "email": "john.smith@example.com",
        "familyName": "Smith",
        "fullName": "John Smith",
        "givenName": "John",
        "id": "cacb559d-b85d-5e64-b623-37252520ebda",
        "jobTitle": "Developer",
        "lastActivity": 2020-01-01T00:00:00.000Z,
        "organizations": Array [],
        "phone": "+44 1234555",
        "preferences": Array [],
        "roles": Array [
          Object {
            "role": Object {
              "id": "1",
              "name": "user",
            },
          },
        ],
        "tags": Array [],
        "title": "Mr",
        "trainer_role_types": Array [
          Object {
            "trainer_role_type": Object {
              "id": "1",
              "name": "principal",
            },
          },
        ],
        "updatedAt": "",
      },
      "reloadCurrentProfile": [MockFunction],
    },
  },
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`CourseBookingReview matches snapshot for OPEN course 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="MuiBox-root css-0"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle1 css-saotp0-MuiTypography-root"
        >
          Please confirm to complete booking
        </h6>
        <div
          class="MuiBox-root css-1yslcum"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-10prckl-MuiTypography-root"
          >
            Your information
          </p>
          <div
            class="MuiBox-root css-3mllz6"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-g4enr8-MuiTypography-root"
            >
              First Name
            </p>
            <p
              class="MuiTypography-root MuiTypography-body1 css-bvjatk-MuiTypography-root"
            >
              John
            </p>
          </div>
          <div
            class="MuiBox-root css-3mllz6"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-g4enr8-MuiTypography-root"
            >
              Last Name
            </p>
            <p
              class="MuiTypography-root MuiTypography-body1 css-bvjatk-MuiTypography-root"
            >
              Smith
            </p>
          </div>
          <div
            class="MuiBox-root css-3mllz6"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-g4enr8-MuiTypography-root"
            >
              Email
            </p>
            <p
              class="MuiTypography-root MuiTypography-body1 css-bvjatk-MuiTypography-root"
            >
              john.smith@example.com
            </p>
          </div>
          <div
            class="MuiBox-root css-3mllz6"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-g4enr8-MuiTypography-root"
            >
              Work phone
            </p>
            <p
              class="MuiTypography-root MuiTypography-body1 css-bvjatk-MuiTypography-root"
            >
              +44 1234555
            </p>
          </div>
        </div>
        <div
          class="MuiBox-root css-f8teni"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-10prckl-MuiTypography-root"
          >
            Order summary
          </p>
          <div
            class="MuiBox-root css-gg4vpm"
          >
            <div
              class="MuiBox-root css-0"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-10prckl-MuiTypography-root"
              >
                My Course 1
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-15v3a2l-MuiTypography-root"
              >
                Start
                :
                 
                10 April 2022, 10:00 AM
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 css-g4enr8-MuiTypography-root"
              >
                End
                :
                 
                10 April 2022, 12:00 PM
              </p>
            </div>
            <div
              class="css-1qvzoxq-MuiStack-root"
            >
              <span
                class="MuiTypography-root MuiTypography-caption MuiTypography-gutterBottom css-fu2bn5-MuiTypography-root"
              >
                Quantity
              </span>
              <p
                class="MuiTypography-root MuiTypography-body1 css-bvjatk-MuiTypography-root"
              >
                3
              </p>
            </div>
          </div>
          <hr
            class="MuiDivider-root MuiDivider-fullWidth css-ctpjxq-MuiDivider-root"
          />
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-10prckl-MuiTypography-root"
          >
            Payment method
          </p>
          <p
            class="MuiTypography-root MuiTypography-body1 css-g4enr8-MuiTypography-root"
          >
            Pay by invoice
          </p>
          <hr
            class="MuiDivider-root MuiDivider-fullWidth css-ctpjxq-MuiDivider-root"
          />
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-10prckl-MuiTypography-root"
          >
            Invoice contact details
          </p>
          <div
            class="MuiBox-root css-3mllz6"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-g4enr8-MuiTypography-root"
            >
              Billing address
            </p>
            <p
              class="MuiTypography-root MuiTypography-body1 css-bvjatk-MuiTypography-root"
            />
          </div>
          <div
            class="MuiBox-root css-3mllz6"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-g4enr8-MuiTypography-root"
            >
              First Name
            </p>
            <p
              class="MuiTypography-root MuiTypography-body1 css-bvjatk-MuiTypography-root"
            />
          </div>
          <div
            class="MuiBox-root css-3mllz6"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-g4enr8-MuiTypography-root"
            >
              Last Name
            </p>
            <p
              class="MuiTypography-root MuiTypography-body1 css-bvjatk-MuiTypography-root"
            />
          </div>
          <div
            class="MuiBox-root css-3mllz6"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-g4enr8-MuiTypography-root"
            >
              Work email
            </p>
            <p
              class="MuiTypography-root MuiTypography-body1 css-bvjatk-MuiTypography-root"
            />
          </div>
          <div
            class="MuiBox-root css-3mllz6"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-g4enr8-MuiTypography-root"
            >
              Phone
            </p>
            <p
              class="MuiTypography-root MuiTypography-body1 css-bvjatk-MuiTypography-root"
            />
          </div>
          <hr
            class="MuiDivider-root MuiDivider-fullWidth css-ctpjxq-MuiDivider-root"
          />
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-10prckl-MuiTypography-root"
          >
            Registrants
          </p>
          <hr
            class="MuiDivider-root MuiDivider-fullWidth css-ctpjxq-MuiDivider-root"
          />
          <div
            class="MuiBox-root css-3mllz6"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-g4enr8-MuiTypography-root"
            >
              Subtotal
            </p>
            <p
              class="MuiTypography-root MuiTypography-body1 css-g4enr8-MuiTypography-root"
            >
              £60.00
            </p>
          </div>
          <hr
            class="MuiDivider-root MuiDivider-fullWidth css-ctpjxq-MuiDivider-root"
          />
          <div
            class="MuiBox-root css-3mllz6"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-g4enr8-MuiTypography-root"
            >
              VAT (20%)
               (
              10
              %)
            </p>
            <p
              class="MuiTypography-root MuiTypography-body1 css-g4enr8-MuiTypography-root"
            >
              £6.00
            </p>
          </div>
          <hr
            class="MuiDivider-root MuiDivider-fullWidth css-ctpjxq-MuiDivider-root"
          />
          <div
            class="MuiBox-root css-3mllz6"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-fp5ivw-MuiTypography-root"
            >
              Amount due
               (
              GBP
              )
            </p>
            <p
              class="MuiTypography-root MuiTypography-body1 css-fp5ivw-MuiTypography-root"
            >
              £66.00
            </p>
          </div>
          <p
            class="MuiTypography-root MuiTypography-body1 css-g4enr8-MuiTypography-root"
          >
            Due immediately
          </p>
        </div>
        <label
          class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd css-zwxq8w-MuiFormControlLabel-root"
        >
          <span
            class="MuiCheckbox-root MuiCheckbox-colorPrimary MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary PrivateSwitchBase-root css-x1h8s1-MuiButtonBase-root-MuiCheckbox-root"
          >
            <input
              class="PrivateSwitchBase-input css-1m9pwf3"
              data-indeterminate="false"
              type="checkbox"
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
              data-testid="CheckBoxOutlineBlankIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
              />
            </svg>
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </span>
          <p
            class="MuiTypography-root MuiTypography-body2 css-1bc48s6-MuiTypography-root"
          >
            I confirm I and/or those individuals added as registrants on this course will attend even if it starts during my 14 day cancellation period. I understand that I will lose my right to cancel the contract once the course is complete and that I must pay for services provided prior to cancellation.
          </p>
        </label>
        <div
          class="MuiBox-root css-10irpkx"
        />
        <div
          class="MuiBox-root css-ns0zoh"
        >
          <button
            class="MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root  css-174o8gv-MuiButtonBase-root-MuiButton-root"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-startIcon MuiButton-iconSizeMedium css-gcc2o7-MuiButton-startIcon"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                data-testid="ArrowBackIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
                />
              </svg>
            </span>
            Back to booking details
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </button>
          <button
            class="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButtonBase-root Mui-disabled  css-u3jo4d-MuiButtonBase-root-MuiButton-root"
            disabled=""
            tabindex="-1"
            type="button"
          >
            Complete booking
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="MuiBox-root css-0"
    >
      <h6
        class="MuiTypography-root MuiTypography-subtitle1 css-saotp0-MuiTypography-root"
      >
        Please confirm to complete booking
      </h6>
      <div
        class="MuiBox-root css-1yslcum"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-10prckl-MuiTypography-root"
        >
          Your information
        </p>
        <div
          class="MuiBox-root css-3mllz6"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-g4enr8-MuiTypography-root"
          >
            First Name
          </p>
          <p
            class="MuiTypography-root MuiTypography-body1 css-bvjatk-MuiTypography-root"
          >
            John
          </p>
        </div>
        <div
          class="MuiBox-root css-3mllz6"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-g4enr8-MuiTypography-root"
          >
            Last Name
          </p>
          <p
            class="MuiTypography-root MuiTypography-body1 css-bvjatk-MuiTypography-root"
          >
            Smith
          </p>
        </div>
        <div
          class="MuiBox-root css-3mllz6"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-g4enr8-MuiTypography-root"
          >
            Email
          </p>
          <p
            class="MuiTypography-root MuiTypography-body1 css-bvjatk-MuiTypography-root"
          >
            john.smith@example.com
          </p>
        </div>
        <div
          class="MuiBox-root css-3mllz6"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-g4enr8-MuiTypography-root"
          >
            Work phone
          </p>
          <p
            class="MuiTypography-root MuiTypography-body1 css-bvjatk-MuiTypography-root"
          >
            +44 1234555
          </p>
        </div>
      </div>
      <div
        class="MuiBox-root css-f8teni"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-10prckl-MuiTypography-root"
        >
          Order summary
        </p>
        <div
          class="MuiBox-root css-gg4vpm"
        >
          <div
            class="MuiBox-root css-0"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-10prckl-MuiTypography-root"
            >
              My Course 1
            </p>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-15v3a2l-MuiTypography-root"
            >
              Start
              :
               
              10 April 2022, 10:00 AM
            </p>
            <p
              class="MuiTypography-root MuiTypography-body1 css-g4enr8-MuiTypography-root"
            >
              End
              :
               
              10 April 2022, 12:00 PM
            </p>
          </div>
          <div
            class="css-1qvzoxq-MuiStack-root"
          >
            <span
              class="MuiTypography-root MuiTypography-caption MuiTypography-gutterBottom css-fu2bn5-MuiTypography-root"
            >
              Quantity
            </span>
            <p
              class="MuiTypography-root MuiTypography-body1 css-bvjatk-MuiTypography-root"
            >
              3
            </p>
          </div>
        </div>
        <hr
          class="MuiDivider-root MuiDivider-fullWidth css-ctpjxq-MuiDivider-root"
        />
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-10prckl-MuiTypography-root"
        >
          Payment method
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1 css-g4enr8-MuiTypography-root"
        >
          Pay by invoice
        </p>
        <hr
          class="MuiDivider-root MuiDivider-fullWidth css-ctpjxq-MuiDivider-root"
        />
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-10prckl-MuiTypography-root"
        >
          Invoice contact details
        </p>
        <div
          class="MuiBox-root css-3mllz6"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-g4enr8-MuiTypography-root"
          >
            Billing address
          </p>
          <p
            class="MuiTypography-root MuiTypography-body1 css-bvjatk-MuiTypography-root"
          />
        </div>
        <div
          class="MuiBox-root css-3mllz6"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-g4enr8-MuiTypography-root"
          >
            First Name
          </p>
          <p
            class="MuiTypography-root MuiTypography-body1 css-bvjatk-MuiTypography-root"
          />
        </div>
        <div
          class="MuiBox-root css-3mllz6"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-g4enr8-MuiTypography-root"
          >
            Last Name
          </p>
          <p
            class="MuiTypography-root MuiTypography-body1 css-bvjatk-MuiTypography-root"
          />
        </div>
        <div
          class="MuiBox-root css-3mllz6"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-g4enr8-MuiTypography-root"
          >
            Work email
          </p>
          <p
            class="MuiTypography-root MuiTypography-body1 css-bvjatk-MuiTypography-root"
          />
        </div>
        <div
          class="MuiBox-root css-3mllz6"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-g4enr8-MuiTypography-root"
          >
            Phone
          </p>
          <p
            class="MuiTypography-root MuiTypography-body1 css-bvjatk-MuiTypography-root"
          />
        </div>
        <hr
          class="MuiDivider-root MuiDivider-fullWidth css-ctpjxq-MuiDivider-root"
        />
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-10prckl-MuiTypography-root"
        >
          Registrants
        </p>
        <hr
          class="MuiDivider-root MuiDivider-fullWidth css-ctpjxq-MuiDivider-root"
        />
        <div
          class="MuiBox-root css-3mllz6"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-g4enr8-MuiTypography-root"
          >
            Subtotal
          </p>
          <p
            class="MuiTypography-root MuiTypography-body1 css-g4enr8-MuiTypography-root"
          >
            £60.00
          </p>
        </div>
        <hr
          class="MuiDivider-root MuiDivider-fullWidth css-ctpjxq-MuiDivider-root"
        />
        <div
          class="MuiBox-root css-3mllz6"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-g4enr8-MuiTypography-root"
          >
            VAT (20%)
             (
            10
            %)
          </p>
          <p
            class="MuiTypography-root MuiTypography-body1 css-g4enr8-MuiTypography-root"
          >
            £6.00
          </p>
        </div>
        <hr
          class="MuiDivider-root MuiDivider-fullWidth css-ctpjxq-MuiDivider-root"
        />
        <div
          class="MuiBox-root css-3mllz6"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-fp5ivw-MuiTypography-root"
          >
            Amount due
             (
            GBP
            )
          </p>
          <p
            class="MuiTypography-root MuiTypography-body1 css-fp5ivw-MuiTypography-root"
          >
            £66.00
          </p>
        </div>
        <p
          class="MuiTypography-root MuiTypography-body1 css-g4enr8-MuiTypography-root"
        >
          Due immediately
        </p>
      </div>
      <label
        class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd css-zwxq8w-MuiFormControlLabel-root"
      >
        <span
          class="MuiCheckbox-root MuiCheckbox-colorPrimary MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary PrivateSwitchBase-root css-x1h8s1-MuiButtonBase-root-MuiCheckbox-root"
        >
          <input
            class="PrivateSwitchBase-input css-1m9pwf3"
            data-indeterminate="false"
            type="checkbox"
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="CheckBoxOutlineBlankIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
            />
          </svg>
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </span>
        <p
          class="MuiTypography-root MuiTypography-body2 css-1bc48s6-MuiTypography-root"
        >
          I confirm I and/or those individuals added as registrants on this course will attend even if it starts during my 14 day cancellation period. I understand that I will lose my right to cancel the contract once the course is complete and that I must pay for services provided prior to cancellation.
        </p>
      </label>
      <div
        class="MuiBox-root css-10irpkx"
      />
      <div
        class="MuiBox-root css-ns0zoh"
      >
        <button
          class="MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root  css-174o8gv-MuiButtonBase-root-MuiButton-root"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-startIcon MuiButton-iconSizeMedium css-gcc2o7-MuiButton-startIcon"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
              data-testid="ArrowBackIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
              />
            </svg>
          </span>
          Back to booking details
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
        <button
          class="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButtonBase-root Mui-disabled  css-u3jo4d-MuiButtonBase-root-MuiButton-root"
          disabled=""
          tabindex="-1"
          type="button"
        >
          Complete booking
        </button>
      </div>
    </div>
  </div>,
  "context": Object {
    "auth": Object {
      "activeRole": "user",
      "allowedRoles": Set {
        "user",
      },
      "changeRole": [MockFunction],
      "defaultRole": "user",
      "getJWT": [MockFunction],
      "loadProfile": [MockFunction],
      "loading": false,
      "login": [MockFunction],
      "logout": [MockFunction],
      "profile": Object {
        "addresses": Array [],
        "attributes": Array [],
        "avatar": "",
        "contactDetails": Array [],
        "createdAt": "",
        "dietaryRestrictions": null,
        "disabilities": null,
        "dob": "2002-04-06",
        "email": "john.smith@example.com",
        "familyName": "Smith",
        "fullName": "John Smith",
        "givenName": "John",
        "id": "cacb559d-b85d-5e64-b623-37252520ebda",
        "jobTitle": "Developer",
        "lastActivity": 2020-01-01T00:00:00.000Z,
        "organizations": Array [],
        "phone": "+44 1234555",
        "preferences": Array [],
        "roles": Array [
          Object {
            "role": Object {
              "id": "1",
              "name": "user",
            },
          },
        ],
        "tags": Array [],
        "title": "Mr",
        "trainer_role_types": Array [
          Object {
            "trainer_role_type": Object {
              "id": "1",
              "name": "principal",
            },
          },
        ],
        "updatedAt": "",
      },
      "reloadCurrentProfile": [MockFunction],
    },
  },
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
